# jockmkt-sdk

./: .gitignore  .readthedocs.yaml  README.rst  basic_api_calls.py  changelog.rst  entity.py  entity_json_res.txt  exception.py  games_res.txt  objects.py  pyproject.toml  requirements.txt  scratch.py  setup.cfg  setup.py
.github/workflows/: jockmkt-sdk-tests.yml
docs/: Makefile  account.rst  conf.py  entities.rst  environment.yaml  index.rst  make.bat  pyproject.toml  readthedocs.yaml  readthedocs.yml  requirements.txt  tradeables.rst  usage.rst
docs/_build/: constants.html  entities.html  entries.html  events.html  games_and_logs.html  genindex.html  index.html  jockmkt_sdk.html  objects.inv  orders.html  positions.html  py-modindex.html  search.html  searchindex.js  teams.html  usage.html
docs/_build/.doctrees/: account.doctree  constants.doctree  entities.doctree  entries.doctree  environment.pickle  events.doctree  games_and_logs.doctree  index.doctree  jockmkt_sdk.doctree  modules.doctree  orders.doctree  positions.doctree  teams.doctree  usage.doctree
docs/_build/_sources/: index.rst.txt  jockmkt_sdk.rst.txt
docs/_build/doctrees/: account.doctree  entities.doctree  (+10 more)
docs/source/: account.rst  conf.py  entries.rst  index.rst  jockmkt_sdk.rst  modules.rst  orders.rst  pyproject.toml  requirements.txt  tradeables.rst  websockets.rst
src/: basic_api_calls.py  exception.py  objects.py
src/jockmkt_sdk/: client.py  exception.py  objects.py  scratch.py
src/jockmkt_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: test_todos.py
(+39 files in other folders)
